export interface ComportamentoNado {
  nadar(): string;
}