export interface ComportamentoSom {
  fazerSom(): string;
}