export interface ComportamentoVoo {
  voar(): string;
}